force-app/main/default/objects/ABML_DP__c/ABML_DP__c.object-meta.xml
<CustomObject>
    <label>ABML DP</label>
    <nameField>
        <label>DP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>