force-app/main/default/objects/ABML_DP__c/fields/ABML_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Client_Code__c</fullName>
    <externalId>true</externalId>
    <label>Client Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>