force-app/main/default/objects/ABML_DP__c/fields/ABML_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>ABML_Client_ID__c</fullName>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>