force-app/main/default/objects/ABML_DP__c/fields/ABML_DP_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_DP_Code__c</fullName>
    <label>DP Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>