force-app/main/default/objects/ABML_DP__c/fields/ABML_DP_ID__c.field-meta.xml
<CustomField>
    <fullName>ABML_DP_ID__c</fullName>
    <label>DP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>