force-app/main/default/objects/ABML_DP__c/fields/ABML_Status__c.field-meta.xml
<CustomField>
    <fullName>ABML_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Suspended for Debit &amp; Credit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Suspended for Debit</fullName>
            </value>
            <value>
                <fullName>Closed, Cancelled by DP</fullName>
            </value>
            <value>
                <fullName>Pending for Activation</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>To Be Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>