force-app/main/default/objects/ABML_DP__c/fields/DP_Unique__c.field-meta.xml
<CustomField>
    <fullName>DP_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>DP Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>